--- a/imports/ui/components/item_show.html
+++ b/imports/ui/components/item_show.html
@@ -1,3 +1,55 @@
 <template name="item_show">
-  item details
+  <div class="item-page page">
+		<div class="header">
+			<div class="item-image">
+				<img src="/images/categories/flat/item-banner.jpg" alt="banner">
+			</div>
+			<div class="header-content">
+				<div class="title">Flat Scandinavian style for days & weeks</div>
+			</div>
+
+			<div class="share">
+				<button class="btn btn-default">
+					Book
+				</button>
+			</div>
+
+			<div class="price-wrapper">
+				<span class="price">520 kr</span>
+				<span class="period">w</span>
+			</div>
+		</div>
+
+		<div class="content container">
+			<div class="top-panel">
+				<div class="left">
+					<div class="user">
+						<img src="/images/avatar.jpg" alt="user">
+
+						<span class="name">James Rodriguez</span>
+					</div>
+				</div>
+
+				<div class="right">
+					<div class="comments-count">
+						<i class="fa fa-comments-o" aria-hidden="true"></i>
+						<span class="count">3</span>
+					</div>
+				</div>
+			</div>
+
+			<div class="address"><i class="fa fa-map-marker" aria-hidden="true"></i> Sankt Eriksgatan 117, Business Center Bilpalatset</div>
+
+			<!-- <div class="avaliable">
+				<i class="fa fa-clock-o" aria-hidden="true"></i>
+				<span class="label">Available:</span>
+				<span class="dates">14.06.2016 - 31.08.2016</span>
+			</div> -->
+
+			<div class="description">
+				<p>The observatory is a popular tourist attraction with an excellent view of the Hollywood sign, and an extensive array of space and science-related displays. </p>
+				<p>Since the observatory opened in 1935, admission has been free...</p>
+			</div>
+		</div>
+	</div>
 </template>
