--- a/imports/ui/components/share_form.html
+++ b/imports/ui/components/share_form.html
@@ -1,3 +1,72 @@
 <template name="share_form">
-  Share ...
+  <div class="share-resource-page page">
+		<div class="container">
+			<form action="#" class="share-resource">
+				<div class="form-group">
+					<div class="image-uploader">
+						<i class="fa fa-plus" aria-hidden="true"></i>
+						<div class="description">
+							Add picture
+						</div>
+					</div>
+				</div>
+				<div class="title-row">
+					<div class="form-group">
+						<div class="input-group">
+							<span class="input-group-addon">
+								<i class="fa fa-briefcase" aria-hidden="true"></i>
+							</span>
+							<input type="text" placeholder="What" value="" class="form-control">
+						</div>
+					</div>
+				</div>
+				<div class="location-row">
+					<div class="form-group">
+						<div class="input-group">
+							<span class="input-group-addon">
+								<i class="fa fa-map-marker" aria-hidden="true"></i>
+							</span>
+							<input type="text" placeholder="Where" value="" class="form-control">
+						</div>
+					</div>
+				</div>
+				<div class="comment-row">
+					<div class="form-group">
+						<div class="input-group">
+							<span class="input-group-addon">
+								<i class="fa fa-comment" aria-hidden="true"></i>
+							</span>
+							<input type="text" placeholder="Description" value="" class="form-control">
+						</div>
+					</div>
+				</div>
+				<div class="price-value-row">
+					<div class="form-group">
+						<div class="input-group">
+							<input type="text" placeholder="Price" value="" class="form-control">
+							<span class="input-group-addon">kr/d</span>
+						</div>
+					</div>
+				</div>
+				<!-- <div class="dates-row">
+					<div class="form-group">
+						<div class="input-group">
+							<input type="text" placeholder="Start date" class="form-control">
+							<span class="input-group-addon">X</span>
+						</div>
+					</div>
+					<div class="form-group">
+						<div class="input-group">
+							<input type="text" placeholder="End date" class="form-control">
+							<span class="input-group-addon">X</span>
+						</div>
+					</div>
+				</div> -->
+
+				<div class="form-action">
+					<button class="btn btn-default">Save</button>
+				</div>
+			</form>
+		</div>
+	</div>
 </template>
