--- a/imports/ui/layouts/app_body.html
+++ b/imports/ui/layouts/app_body.html
@@ -14,7 +14,7 @@
 
 					<div class="navbar-header without-text">
 						<div class="logotype-wrapper">
-							<a href="/index.html" class="logo">
+							<a href="/" class="logo">
 								<img src="/images/logo-white.png" alt="logotype">
 							</a>
 						</div>
