auth-secure book

--- a/imports/ui/components/item_show.html
+++ b/imports/ui/components/item_show.html
@@ -9,9 +9,9 @@
 			</div>
 
 			<div class="share">
-				<button class="btn btn-default">
+				<a href="/cars/12345/book" class="btn btn-default">
 					Book
-				</button>
+				</a>
 			</div>
 
 			<div class="price-wrapper">
