--- a/imports/ui/layouts/app_body.html
+++ b/imports/ui/layouts/app_body.html
@@ -36,6 +36,12 @@
 
     <div class="bottom-panel">
 			<ul class="list-unstyled">
+        <li>
+					<a href="/history">
+						<i class="fa fa-th" aria-hidden="true"></i>
+						<span class="title">My searches</span>
+					</a>
+				</li>
 				<li class="active">
 					<a href="/">
 						<i class="fa fa-th" aria-hidden="true"></i>
