--- a/imports/ui/components/categories.html
+++ b/imports/ui/components/categories.html
@@ -6,119 +6,29 @@
         <input type="search" class="form-control" value="" placeholder="Search" />
       </div>
     </div>
+
     <div class="category-list">
-      <div class="item wide">
-        <div class="image">
-          <img src="/images/categories/category-wide.jpg" alt="">
-        </div>
-        <div class="title-wrapper">
-          <div class="text-wrapper">
-            <div class="middle">
-              <div class="title">Cars</div>
-              <div class="item-counts">246</div>
+      <!-- {{#unless categories}}
+        {{> spinner}}
+      {{else}} -->
+        {{#each cat in categories}}
+          <div class="item {{classWide cat}}">
+            <div class="image">
+              <img src="{{cat.image.url}}" alt="">
+            </div>
+            <div class="title-wrapper">
+              <div class="text-wrapper">
+                <div class="middle">
+                  <div class="title">{{cat.displayName}}</div>
+                  <!-- TODO: implement items count -->
+                  <!-- <div class="item-counts">?246?</div> -->
+                </div>
+              </div>
+              <a href="/{{cat.name}}" class="backdrop"></a>
             </div>
           </div>
-          <a href="/cars" class="backdrop"></a>
-        </div>
-      </div>
-      <div class="item">
-        <div class="image">
-          <img src="/images/categories/category.jpg" alt="">
-        </div>
-        <div class="title-wrapper">
-          <div class="text-wrapper">
-            <div class="middle">
-              <div class="title">Bicycles</div>
-              <div class="item-counts">89</div>
-            </div>
-          </div>
-          <a href="/bicycles" class="backdrop"></a>
-        </div>
-      </div>
-      <div class="item">
-        <div class="image">
-          <img src="/images/categories/flats.jpg" alt="">
-        </div>
-        <div class="title-wrapper">
-          <div class="text-wrapper">
-            <div class="middle">
-              <div class="title">Flats</div>
-              <div class="item-counts">61</div>
-            </div>
-          </div>
-          <a href="/category.html" class="backdrop"></a>
-        </div>
-      </div>
-      <div class="item">
-        <div class="image">
-          <img src="/images/categories/books.jpg" alt="">
-        </div>
-        <div class="title-wrapper">
-          <div class="text-wrapper">
-            <div class="middle">
-              <div class="title">books</div>
-              <div class="item-counts">48</div>
-            </div>
-          </div>
-          <a href="/category.html" class="backdrop"></a>
-        </div>
-      </div>
-      <div class="item">
-        <div class="image">
-          <img src="/images/categories/snowboards.jpg" alt="">
-        </div>
-        <div class="title-wrapper">
-          <div class="text-wrapper">
-            <div class="middle">
-              <div class="title">Snowboards</div>
-              <div class="item-counts">64</div>
-            </div>
-          </div>
-          <a href="/category.html" class="backdrop"></a>
-        </div>
-      </div>
-      <div class="item wide">
-        <div class="image">
-          <img src="/images/categories/clearing.jpg" alt="">
-        </div>
-        <div class="title-wrapper">
-          <div class="text-wrapper">
-            <div class="middle">
-              <div class="title">Clearing</div>
-              <div class="item-counts">182</div>
-            </div>
-          </div>
-          <a href="/category.html" class="backdrop"></a>
-        </div>
-      </div>
-      <div class="item">
-        <div class="image">
-          <img src="/images/categories/category.jpg" alt="">
-        </div>
-        <div class="title-wrapper">
-          <div class="text-wrapper">
-            <div class="middle">
-              <div class="title">Games</div>
-              <div class="item-counts">89</div>
-            </div>
-          </div>
-          <a href="/category.html" class="backdrop"></a>
-        </div>
-      </div>
-      <div class="item">
-        <div class="image">
-          <img src="/images/categories/category.jpg" alt="">
-        </div>
-        <div class="title-wrapper">
-          <div class="text-wrapper">
-            <div class="middle">
-              <div class="title">Games</div>
-              <div class="item-counts">89</div>
-            </div>
-          </div>
-          <a href="/category.html" class="backdrop"></a>
-        </div>
-      </div>
+        {{/each}}
+      <!-- {{/unless}} -->
     </div>
   </div>
 </template>
