--- a/imports/ui/layouts/app_body.html
+++ b/imports/ui/layouts/app_body.html
@@ -39,13 +39,13 @@
         <li>
 					<a href="/history">
 						<i class="fa fa-th" aria-hidden="true"></i>
-						<span class="title">My searches</span>
+						<span class="title">History</span>
 					</a>
 				</li>
 				<li class="active">
 					<a href="/">
 						<i class="fa fa-th" aria-hidden="true"></i>
-						<span class="title">Things</span>
+						<span class="title">Catalog</span>
 					</a>
 				</li>
 				<li>
