--- a/imports/ui/layouts/app_body.html
+++ b/imports/ui/layouts/app_body.html
@@ -22,7 +22,7 @@
 
           {{#if loggedIn}}
 					<div class="user">
-						<img src="{{ userProfilePictureUrl }}" alt="user">
+						<img src="{{ loggedInUserProfilePictureUrl }}" alt="user">
 						<!-- <div class="has-message">
 							<i class="fa fa-comments-o" aria-hidden="true"></i>
 						</div> -->
