--- a/imports/ui/components/deal.html
+++ b/imports/ui/components/deal.html
@@ -19,6 +19,20 @@
 						<span class="name">{{userNameByUserId thing.owner}}</span>
 					</div>
 				</div>
+        <div>
+          <p>
+            Booked at: {{ thing.booking_dt }}
+          </p>
+          <p>
+            Pick-up: {{ thing.pickup_dt }}
+          </p>
+          <p>
+            Return: {{ thinп.return_dt }}
+          </p>
+        </div>
+        <div>
+          Events/timeline
+        </div>
       </div>
     </div>
   </div>
