--- a/imports/ui/components/catalog.html
+++ b/imports/ui/components/catalog.html
@@ -1,4 +1,4 @@
-<template name="categories">
+<template name="catalog">
   <div class="container">
     <div class="search-panel">
       <button class="btn btn-default">Search</button>
@@ -24,7 +24,7 @@
                   <!-- <div class="item-counts">?246?</div> -->
                 </div>
               </div>
-              <a href="/{{cat.name}}" class="backdrop"></a>
+              <a href="/catalog/{{cat.name}}" class="backdrop"></a>
             </div>
           </div>
         {{/each}}
