--- a/imports/ui/components/thing_show.html
+++ b/imports/ui/components/thing_show.html
@@ -1,4 +1,4 @@
-<template name="item_show">
+<template name="thing_show">
   <div class="item-page page">
 		<div class="header">
 			<div class="item-image">
@@ -9,7 +9,7 @@
 			</div>
 
 			<div class="share">
-				<a href="/{{thing.category}}/{{thing.slug}}/book" class="btn btn-default">
+				<a href="/things/{{thing.slug}}/book" class="btn btn-default">
 					Book
 				</a>
 			</div>
