--- a/imports/ui/components/category.html
+++ b/imports/ui/components/category.html
@@ -1,4 +1,4 @@
-<template name="category_items">
+<template name="category">
   <div class="category-page page">
 		<div class="header">
 			<div class="category-image">
@@ -16,7 +16,7 @@
 		</div>
 
 		<ul class="item-list list-unstyled">
-      <!-- TODO: show text "Oops... No things in this category so far" when no things -->
+      <!-- TODO: show text "Oops... Nothing in this category so far" when no things -->
       {{#each thing in things}}
   			<li class="item">
   				<div class="image">
@@ -35,7 +35,7 @@
   						<i class="fa fa-chevron-right" aria-hidden="true"></i>
   					</div>
   				</div>
-  				<a href="/{{category.name}}/{{thing.slug}}" class="backdrop"></a>
+  				<a href="/things/{{thing.slug}}" class="backdrop"></a>
   			</li>
       {{/each}}
 		</ul>
