--- a/imports/ui/components/me.html
+++ b/imports/ui/components/me.html
@@ -13,10 +13,10 @@
 			</div> -->
 			<div class="user">
 				<div class="avatar">
-					<img src="/images/avatar.jpg" alt="user">
+					<img src="{{ loggedInUserProfilePictureUrl }}" alt="user">
 				</div>
 				<div class="name">
-					James Rodriguez
+					{{loggedInUserName}}
 				</div>
 			</div>
 			<div class="right">
