--- a/imports/ui/stylesheets/theme/_typography.scss
+++ b/imports/ui/stylesheets/theme/_typography.scss
@@ -2,12 +2,12 @@
 
 @font-face {
     font-family: 'proxima_nova_rgbold';
-    src: url('../fonts/mark_simonson_-_proxima_nova_bold-webfont.eot');
-    src: url('../fonts/mark_simonson_-_proxima_nova_bold-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/mark_simonson_-_proxima_nova_bold-webfont.woff2') format('woff2'),
-         url('../fonts/mark_simonson_-_proxima_nova_bold-webfont.woff') format('woff'),
-         url('../fonts/mark_simonson_-_proxima_nova_bold-webfont.ttf') format('truetype'),
-         url('../fonts/mark_simonson_-_proxima_nova_bold-webfont.svg#proxima_nova_rgbold') format('svg');
+    src: url('./fonts/mark_simonson_-_proxima_nova_bold-webfont.eot');
+    src: url('./fonts/mark_simonson_-_proxima_nova_bold-webfont.eot?#iefix') format('embedded-opentype'),
+         url('./fonts/mark_simonson_-_proxima_nova_bold-webfont.woff2') format('woff2'),
+         url('./fonts/mark_simonson_-_proxima_nova_bold-webfont.woff') format('woff'),
+         url('./fonts/mark_simonson_-_proxima_nova_bold-webfont.ttf') format('truetype'),
+         url('./fonts/mark_simonson_-_proxima_nova_bold-webfont.svg#proxima_nova_rgbold') format('svg');
     font-weight: normal;
     font-style: normal;
 }
