--- a/imports/ui/components/share_form.html
+++ b/imports/ui/components/share_form.html
@@ -1,22 +1,34 @@
 <template name="share_form">
+
   <div class="share-resource-page page">
 		<div class="container">
 			<form action="#" class="share-resource">
-				<div class="form-group">
+        <div id="myDropzone" class="dropzone">
+
+        </div>
+        <!-- {{> dropzone url='/' id='myDropzone' maxFiles=1}} -->
+				<!-- <div class="form-group">
 					<div class="image-uploader">
 						<i class="fa fa-plus" aria-hidden="true"></i>
 						<div class="description">
 							Add picture
 						</div>
 					</div>
-				</div>
+				</div> -->
+
+        <!-- <input type="file" class="file_bag">
+        <button class="upload">Upload</button> -->
+        {{#if processing}}
+          {{> spinner}}
+        {{/if}}
+
 				<div class="title-row">
 					<div class="form-group">
 						<div class="input-group">
 							<span class="input-group-addon">
 								<i class="fa fa-briefcase" aria-hidden="true"></i>
 							</span>
-							<input type="text" placeholder="What" value="" class="form-control">
+							<input id="what" type="text" placeholder="What" value="" class="form-control">
 						</div>
 					</div>
 				</div>
@@ -26,7 +38,7 @@
 							<span class="input-group-addon">
 								<i class="fa fa-map-marker" aria-hidden="true"></i>
 							</span>
-							<input type="text" placeholder="Where" value="" class="form-control">
+							<input id="where" type="text" placeholder="Where" value="" class="form-control">
 						</div>
 					</div>
 				</div>
@@ -36,14 +48,14 @@
 							<span class="input-group-addon">
 								<i class="fa fa-comment" aria-hidden="true"></i>
 							</span>
-							<input type="text" placeholder="Description" value="" class="form-control">
+							<input type="text" id="description" placeholder="Description" value="" class="form-control">
 						</div>
 					</div>
 				</div>
 				<div class="price-value-row">
 					<div class="form-group">
 						<div class="input-group">
-							<input type="text" placeholder="Price" value="" class="form-control">
+							<input id="price" type="text" placeholder="Price" value="" class="form-control">
 							<span class="input-group-addon">kr/d</span>
 						</div>
 					</div>
@@ -64,7 +76,11 @@
 				</div> -->
 
 				<div class="form-action">
-					<button class="btn btn-default">Save</button>
+          {{#if saved}}
+            <span>Saved <a href="{{pathToThing thing}}">See your thing</a></span>
+          {{else}}
+            <button class="btn btn-default js-save">Save</button>
+          {{/if}}
 				</div>
 			</form>
 		</div>
