--- a/imports/ui/components/thing_show.html
+++ b/imports/ui/components/thing_show.html
@@ -48,7 +48,7 @@
 			</div> -->
 
 			<div class="description">
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam feugiat elit ut molestie semper. Donec condimentum diam libero, luctus iaculis eros ultrices ac. Aliquam non mi sit amet nisl commodo rutrum vitae et odio. Curabitur bibendum vehicula condimentum. Nullam vitae dolor consequat, ultricies sapien sit amet, suscipit augue. Sed efficitur tellus sapien, quis molestie odio tincidunt id. Nunc dictum faucibus porta.</p>
+				<p>{{thing.description}}</p>
 			</div>
 		</div>
 	</div>
