basic validation when creating a thing -> all fields are mandatory

--- a/imports/ui/components/thing_show.html
+++ b/imports/ui/components/thing_show.html
@@ -1,3 +1,6 @@
+<!-- TODO: it would be nice to know the category of the thing  -->
+<!-- TODO: it would be nice to have a link to go back to the category / go see all things in the category -->
+
 <template name="thing_show">
   <div class="item-page page">
 		<div class="header">
