either owner sending to borrower or borrower sending to owner

--- a/imports/ui/components/deal.html
+++ b/imports/ui/components/deal.html
@@ -47,7 +47,7 @@
           <ul>
             {{#each event in events}}
               {{#with event}}
-                <li class="js-event" >
+                <li class="js-event" id="{{ event._id }}">
                   <div style="{{ eventBackgroundCss event }}">
                     <div class="user">
                       <img src="{{ userProfilePictureUrlByUserId event.user }}" alt="user">
