--- a/imports/ui/layouts/app_body.html
+++ b/imports/ui/layouts/app_body.html
@@ -42,7 +42,7 @@
 			<ul class="list-unstyled">
         <li>
 					<a href="/history">
-						<i class="fa fa-th" aria-hidden="true"></i>
+						<!-- <i class="fa fa-th" aria-hidden="true"></i> -->
 						<span class="title">History</span>
 					</a>
 				</li>
