--- a/imports/ui/components/me.html
+++ b/imports/ui/components/me.html
@@ -59,9 +59,9 @@
 				</a>
 			</li>
 			<li class="logout">
-				<a href="#">
+				<a href="#" class="js-logout">
 					<i class="fa fa-sign-out" aria-hidden="true"></i>
-					<span>Loguot</span>
+					<span>Logout</span>
 				</a>
 			</li>
 		</ul>
