--- a/imports/ui/components/me.html
+++ b/imports/ui/components/me.html
@@ -65,5 +65,22 @@
 				</a>
 			</li>
 		</ul>
+    <div>
+      <h6>Private memberships</h6>
+      <ul class="menu list-unstyled">
+        <li>
+          Org 1 / Cars <input type="checkbox" checked="true" />
+        </li>
+        <li>
+          Org 2 / Tools <input type="checkbox" />
+        </li>
+        <li>
+          <input type="text" name="org_name" placeholder="org" style="width: 50px" />
+          /
+          <input type="text" name="secret" placeholder="secret" style="width: 50px"/>
+          <button><a id="join_button" href="#join_button">Join</a></button>
+        </li>
+      </ul>
+    </div>
 	</div>
 </template>
