--- a/imports/ui/components/share_form.html
+++ b/imports/ui/components/share_form.html
@@ -91,6 +91,32 @@
 						</div>
 					</div>
 				</div> -->
+        <div>
+          <p>
+            --- Privacy --- <br />
+            (group things in a pool and share privetly) <br />
+            Add to pool <br />
+            (pick one this thing belongs to / make a new one / skip privacy)
+          </p>
+          <input type="radio" name="pool" value="asdhklf" />asdhklf <br />
+          <input type="radio" name="pool" value="ALDSF" />ALDSF<br />
+          <input type="radio" name="pool" value="1893465" />1893465<br />
+          <label for="new_pool_name">Name</label>
+          <input type="text" name="new_pool_name" placeholder="ex. jewelry" /><br />
+          <label for="new_pool_secret">Secret</label>
+          <input type="text" name="new_pool_secret" placeholder="ex. unicorns-exist" />
+          <button><a id="#add_pool" href="#add_pool">Add</a></button>
+        </div>
+        <!-- <div>
+          <p>
+            Circles <br />
+            Share with: <br />
+          </p>
+          <input type="checkbox" name="globe" value="globe">the Globe<br>
+          <input type="checkbox" name="my_cirle_1" value="my_cirle_1">My cirlce 1<br>
+          <input type="checkbox" name="my_cirle_2" value="my_cirle_2">My cirlce 2<br>
+          <input type="text" name="new_pool" placeholder="give it a name (ex. )" /><button><a href="#">Add</a></button>
+        </div> -->
 
 				<div class="form-action">
           {{#if saved}}
