create new pools

--- a/imports/ui/components/share_form.html
+++ b/imports/ui/components/share_form.html
@@ -104,10 +104,10 @@
           {{/each}}
           <span>TODO...</span><br />
           <label for="new_pool_name">Name</label>
-          <input type="text" name="new_pool_name" placeholder="ex. jewelry" disabled="true" /><br />
+          <input type="text" name="new_pool_name" placeholder="ex. jewelry" /><br />
           <label for="new_pool_secret">Secret</label>
-          <input type="text" name="new_pool_secret" placeholder="ex. unicorns-exist" disabled="true" />
-          <button><a id="#add_pool" href="#add_pool">Add</a></button>
+          <input type="text" name="new_pool_secret" placeholder="ex. unicorns-exist" />
+          <button><a id="#add_pool" href="#add_pool" class="js-add-new-pool">Add</a></button>
         </div>
         <!-- <div>
           <p>
