joining private pools

--- a/imports/ui/components/me.html
+++ b/imports/ui/components/me.html
@@ -68,17 +68,16 @@
     <div>
       <h6>Private memberships</h6>
       <ul class="menu list-unstyled">
-        <li>
-          Org 1 / Cars <input type="checkbox" checked="true" />
-        </li>
-        <li>
-          Org 2 / Tools <input type="checkbox" />
-        </li>
+        {{#each m in memberships}}
+          <li>
+            {{m.pool.name}} <input type="checkbox" checked="true" />
+          </li>
+        {{/each}}
         <li>
           <input type="text" name="org_name" placeholder="org" style="width: 50px" />
           /
           <input type="text" name="secret" placeholder="secret" style="width: 50px"/>
-          <button><a id="join_button" href="#join_button">Join</a></button>
+          <button><a id="join_button" href="#join_button" class="js-claim-membership">Join</a></button>
         </li>
       </ul>
     </div>
