fix the rest of no-autopublish

--- a/imports/ui/components/me.html
+++ b/imports/ui/components/me.html
@@ -70,7 +70,8 @@
       <ul class="menu list-unstyled">
         {{#each m in memberships}}
           <li>
-            {{m.pool.name}} <input type="checkbox" checked="true" />
+            {{m.pool.name}}
+            <!-- <input type="checkbox" checked="true" /> -->
           </li>
         {{/each}}
         <li>
